--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <p>
-    <mat-toolbar color="primary">
-      <span>My Application</span>
-      <span class="example-spacer"></span>
-      <a class="text-light m-3 nav-link" href="">Sign in</a>
-      <a class="text-light m-3 nav-link" href="">Sign Up</a>
-    </mat-toolbar>
-  </p>
+  <mat-toolbar color="primary">
+    <span>My Application</span>
+    <span class="example-spacer"></span>
+    <a class="text-light m-3 nav-link" [routerLink]="['/signin']">Sign In</a>
+    <a class="text-light m-3 nav-link" [routerLink]="['/signup']">Sign Up</a>
+  </mat-toolbar>
+</p>
